@@ -24,6 +24,7 @@
 int
 fedisableexcept (int excepts)
 {
+#ifndef __SOFT_FLOAT__
   unsigned long int new_exc, old_exc;
 
   _FPU_GETCW(new_exc);
@@ -36,5 +37,6 @@ fedisableexcept (int excepts)
 
   _FPU_SETCW(new_exc);
 
+#endif
   return old_exc;
 }
